--- a/utility.css
+++ b/utility.css
@@ -11,6 +11,9 @@
 .fff-color {
   color: #fff;
 }
+.black-color {
+  color: #000;
+}
 .grey-txt {
   color: #75787d;
 }
@@ -71,6 +74,9 @@
 }
 .hover-fff-color-bg:hover {
   background-color: #fff;
+}
+.hover-black-color:hover {
+  background-color: #000;
 }
 .hover-red-bg:hover {
   background-color: red;
@@ -9695,160 +9701,238 @@ si intende mobile first < 400*/
   margin-left: 100%;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 601px) {
   /* columns  */
 
-  .col-md-1 {
+  .col-s-1 {
     width: calc((100% / 12) * 1);
   }
-  .col-md-2 {
+  .col-s-2 {
     width: calc((100% / 12) * 2);
   }
-  .col-md-3 {
+  .col-s-3 {
     width: 25%;
   }
-  .col-md-4 {
+  .col-s-4 {
     width: calc((100% / 12) * 4);
   }
-  .col-md-5 {
+  .col-s-5 {
     width: calc((100% / 12) * 5);
   }
-  .col-md-6 {
+  .col-s-6 {
     width: 50%;
   }
-  .col-md-7 {
+  .col-s-7 {
     width: calc((100% / 12) * 7);
   }
-  .col-md-8 {
+  .col-s-8 {
     width: calc((100% / 12) * 8);
   }
-  .col-md-9 {
+  .col-s-9 {
     width: 75%;
   }
-  .col-md-10 {
+  .col-s-10 {
     width: calc((100% / 12) * 10);
   }
-  .col-md-11 {
+  .col-s-11 {
     width: calc((100% / 12) * 11);
   }
-  .col-md-12 {
+  .col-s-12 {
     width: 100%;
   }
 
   /* offset */
-  .offset-md-1 {
+  .offset-s-1 {
     margin-left: calc((100% / 12) * 1);
   }
-  .offset-md-2 {
+  .offset-s-2 {
     margin-left: calc((100% / 12) * 2);
   }
-  .offset-md-3 {
+  .offset-s-3 {
     margin-left: 25%;
   }
-  .offset-md-4 {
+  .offset-s-4 {
     margin-left: calc((100% / 12) * 4);
   }
-  .offset-md-5 {
+  .offset-s-5 {
     margin-left: calc((100% / 12) * 5);
   }
-  .offset-md-6 {
+  .offset-s-6 {
     margin-left: 50%;
   }
-  .offset-md-7 {
+  .offset-s-7 {
     margin-left: calc((100% / 12) * 7);
   }
-  .offset-md-8 {
+  .offset-s-8 {
     margin-left: calc((100% / 12) * 8);
   }
-  .offset-md-9 {
+  .offset-s-9 {
     margin-left: 75%;
   }
-  .offset-md-10 {
+  .offset-s-10 {
     margin-left: calc((100% / 12) * 10);
   }
-  .offset-md-11 {
+  .offset-s-11 {
     margin-left: calc((100% / 12) * 11);
   }
-  .offset-md-12 {
+  .offset-s-12 {
     margin-left: 100%;
   }
 }
 
-@media screen and (min-width: 950px) {
+@media screen and (min-width: 768px) {
   /* columns  in desktop*/
 
-  .col-lg-1 {
+  .col-m-1 {
     width: calc((100% / 12) * 1);
   }
-  .col-lg-2 {
+  .col-m-2 {
     width: calc((100% / 12) * 2);
   }
-  .col-lg-3 {
+  .col-m-3 {
     width: 25%;
   }
-  .col-lg-4 {
+  .col-m-4 {
     width: calc((100% / 12) * 4);
   }
-  .col-lg-5 {
+  .col-m-5 {
     width: calc((100% / 12) * 5);
   }
-  .col-lg-6 {
+  .col-m-6 {
     width: 50%;
   }
-  .col-lg-7 {
+  .col-m-7 {
     width: calc((100% / 12) * 7);
   }
-  .col-lg-8 {
+  .col-m-8 {
     width: calc((100% / 12) * 8);
   }
-  .col-lg-9 {
+  .col-m-9 {
     width: 75%;
   }
-  .col-lg-10 {
+  .col-m-10 {
     width: calc((100% / 12) * 10);
   }
-  .col-lg-11 {
+  .col-m-11 {
     width: calc((100% / 12) * 11);
   }
-  .col-lg-12 {
+  .col-m-12 {
     width: 100%;
   }
 
   /* offset */
-  .offset-lg-1 {
+  .offset-m-1 {
     margin-left: calc((100% / 12) * 1);
   }
-  .offset-lg-2 {
+  .offset-m-2 {
     margin-left: calc((100% / 12) * 2);
   }
-  .offset-lg-3 {
+  .offset-m-3 {
     margin-left: 25%;
   }
-  .offset-lg-4 {
+  .offset-m-4 {
     margin-left: calc((100% / 12) * 4);
   }
-  .offset-lg-5 {
+  .offset-m-5 {
     margin-left: calc((100% / 12) * 5);
   }
-  .offset-lg-6 {
+  .offset-m-6 {
     margin-left: 50%;
   }
-  .offset-lg-7 {
+  .offset-m-7 {
     margin-left: calc((100% / 12) * 7);
   }
-  .offset-lg-8 {
+  .offset-m-8 {
     margin-left: calc((100% / 12) * 8);
   }
-  .offset-lg-9 {
+  .offset-m-9 {
     margin-left: 75%;
   }
-  .offset-lg-10 {
+  .offset-m-10 {
     margin-left: calc((100% / 12) * 10);
   }
-  .offset-lg-11 {
+  .offset-m-11 {
     margin-left: calc((100% / 12) * 11);
   }
-  .offset-lg-12 {
+  .offset-m-12 {
+    margin-left: 100%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  /* columns  in desktop*/
+
+  .col-l-1 {
+    width: calc((100% / 12) * 1);
+  }
+  .col-l-2 {
+    width: calc((100% / 12) * 2);
+  }
+  .col-l-3 {
+    width: 25%;
+  }
+  .col-l-4 {
+    width: calc((100% / 12) * 4);
+  }
+  .col-l-5 {
+    width: calc((100% / 12) * 5);
+  }
+  .col-l-6 {
+    width: 50%;
+  }
+  .col-l-7 {
+    width: calc((100% / 12) * 7);
+  }
+  .col-l-8 {
+    width: calc((100% / 12) * 8);
+  }
+  .col-l-9 {
+    width: 75%;
+  }
+  .col-l-10 {
+    width: calc((100% / 12) * 10);
+  }
+  .col-l-11 {
+    width: calc((100% / 12) * 11);
+  }
+  .col-l-12 {
+    width: 100%;
+  }
+
+  /* offset */
+  .offset-l-1 {
+    margin-left: calc((100% / 12) * 1);
+  }
+  .offset-l-2 {
+    margin-left: calc((100% / 12) * 2);
+  }
+  .offset-l-3 {
+    margin-left: 25%;
+  }
+  .offset-l-4 {
+    margin-left: calc((100% / 12) * 4);
+  }
+  .offset-l-5 {
+    margin-left: calc((100% / 12) * 5);
+  }
+  .offset-l-6 {
+    margin-left: 50%;
+  }
+  .offset-l-7 {
+    margin-left: calc((100% / 12) * 7);
+  }
+  .offset-l-8 {
+    margin-left: calc((100% / 12) * 8);
+  }
+  .offset-l-9 {
+    margin-left: 75%;
+  }
+  .offset-l-10 {
+    margin-left: calc((100% / 12) * 10);
+  }
+  .offset-l-11 {
+    margin-left: calc((100% / 12) * 11);
+  }
+  .offset-l-12 {
     margin-left: 100%;
   }
 }
