--- a/index.css
+++ b/index.css
@@ -2,7 +2,14 @@
 .wrap-all-but-aside {
   width: calc(100% - 70px);
 }
-/* MAIN ALTO 100vh - header e footer*/
+/* MAIN ALTO 100vh - e footer altri
+100px li ha di padding per staccarsi
+dall'header che è fissato in modo absolute*/
 main {
-  height: calc(100% - 200px);
+  height: calc(100% - 100px);
+}
+
+header {
+  width: calc(100vw - 70px);
+  opacity: 0.4;
 }
