--- a/utility.css
+++ b/utility.css
@@ -217,6 +217,11 @@
   top: 50%;
   transform: translateY(-50%);
 }
+.top0-left0-of-abs {
+  position: absolute;
+  left: 0;
+  top: 0%;
+}
 .centerY-right0-of-abs {
   position: absolute;
   right: 0;
@@ -244,7 +249,7 @@
   vertical-align: sub;
 }
 /* UTILITIES gestione overflow */
-.overflow-y {
+.overflow-y-auto {
   height: 100%;
   overflow-y: auto;
 }
