--- a/index.css
+++ b/index.css
@@ -24,6 +24,21 @@ header button {
   border-color: #fff;
 }
 
+/* FOOTER */
+/* creare linea verticale
+ in fondo alle freccie prima
+ e dopo tasto play */
+footer .fa-caret-left span {
+  bottom: 19%;
+  right: 91%;
+}
+footer .fa-caret-right span {
+  bottom: 19%;
+  left: 91%;
+}
+
+/* **************** */
+/* MEDIA QUERIES */
 @media screen and (min-width: 601px) {
   .wrap-header-and-main {
     width: calc(100vw - 175px);
@@ -65,6 +80,28 @@ header button {
     top: 43%;
     left: 13%;
   }
+  /* footer */
+  .brano-e-like-wrap {
+    width: 28%;
+  }
+  .heartFolder-wrap {
+    flex-grow: 2.2;
+  }
+  .player-wrap {
+    width: 40%;
+  }
+  .player-btn-wrap {
+    width: 55%;
+  }
+  .time-bar {
+    width: 73%;
+  }
+  .volum-wrap {
+    width: 28%;
+  }
+  .progression-audio {
+    width: 50%;
+  }
 
   header::after {
     background: red;
@@ -83,6 +120,22 @@ header button {
 }
 
 @media screen and (min-width: 668px) {
+  /* footer */
+  #container {
+    border: 1px solid blue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .player-btn-wrap {
+    width: 50%;
+  }
+  .time-bar {
+    width: 77%;
+  }
+
   header::after {
     background: green;
     content: 'siamo in m';
@@ -100,6 +153,30 @@ header button {
 }
 
 @media screen and (min-width: 1200px) {
+  /* footer */
+  .brano-e-like-wrap {
+    width: 17%;
+  }
+  .heartFolder-wrap {
+    flex-direction: row;
+    width: 24%;
+    flex-grow: initial;
+  }
+  .player-wrap {
+    width: 37%;
+  }
+  .player-btn-wrap {
+    width: 40%;
+  }
+  .time-bar {
+    width: 85%;
+  }
+  .volum-wrap {
+    width: 17%;
+  }
+  .progression-audio {
+    width: 60%;
+  }
   header::after {
     background: dodgerblue;
     content: 'siamo in l';
