--- a/index.css
+++ b/index.css
@@ -61,6 +61,9 @@ footer .wrap-play-btn {
 footer .wrap-play-btn:hover {
   scale: 1.1;
 }
+footer .fa-play:hover {
+  border: 0;
+}
 
 /* **************** */
 /* MEDIA QUERIES */
