--- a/index.css
+++ b/index.css
@@ -1,11 +1,16 @@
 .wrap-all-but-footer {
-  height: calc(100vh - 90px);
+  height: calc(100vh - 70px);
 }
 
 /* MOBILE FIRST */
 /* AVVOLGITORE header e main */
 .wrap-header-and-main {
   width: calc(100vw - 40px);
+}
+
+/* MAIN */
+main .row1 img {
+  max-width: 180px;
 }
 /* ASIDE */
 /* far sparire la parte da 
@@ -152,15 +157,6 @@ footer .fa-play:hover {
 }
 
 @media screen and (min-width: 668px) {
-  /* footer */
-  #container {
-    border: 1px solid blue;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
   .player-btn-wrap {
     width: 50%;
   }
