--- a/utility.css
+++ b/utility.css
@@ -284,6 +284,10 @@
   height: 100%;
   overflow-y: auto;
 }
+.overflow-x-auto {
+  height: 100%;
+  overflow-x: auto;
+}
 .overflow-hidden {
   overflow: hidden;
 }
@@ -3967,6 +3971,9 @@ fastidiosi nei tag */
 }
 .h590px {
   height: 590px;
+}
+.h600px {
+  height: 600px;
 }
 .h610px {
   height: 610px;
@@ -10022,4 +10029,680 @@ si intende mobile first < 400*/
   .offset-l-12 {
     margin-left: 100%;
   }
+}
+/* FLEX BASIS */
+.flex-basis-1px {
+  flex-basis: 1px;
+}
+.flex-basis-2px {
+  flex-basis: 2px;
+}
+.flex-basis-2-5px {
+  flex-basis: 2.5px;
+}
+.flex-basis-3px {
+  flex-basis: 3px;
+}
+.flex-basis-4px {
+  flex-basis: 4px;
+}
+.flex-basis-5px {
+  flex-basis: 5px;
+}
+.flex-basis-6px {
+  flex-basis: 6px;
+}
+.flex-basis-7px {
+  flex-basis: 7px;
+}
+.flex-basis-8px {
+  flex-basis: 8px;
+}
+.flex-basis-9px {
+  flex-basis: 9px;
+}
+.flex-basis-10px {
+  flex-basis: 10px;
+}
+.flex-basis-11px {
+  flex-basis: 11px;
+}
+.flex-basis-12px {
+  flex-basis: 12px;
+}
+.flex-basis-13px {
+  flex-basis: 13px;
+}
+.flex-basis-14px {
+  flex-basis: 14px;
+}
+.flex-basis-15px {
+  flex-basis: 15px;
+}
+.flex-basis-16px {
+  flex-basis: 16px;
+}
+.flex-basis-17px {
+  flex-basis: 17px;
+}
+.flex-basis-18px {
+  flex-basis: 18px;
+}
+.flex-basis-19px {
+  flex-basis: 19px;
+}
+.flex-basis-20px {
+  flex-basis: 20px;
+}
+.flex-basis-21px {
+  flex-basis: 21px;
+}
+.flex-basis-22px {
+  flex-basis: 22px;
+}
+.flex-basis-23px {
+  flex-basis: 23px;
+}
+.flex-basis-24px {
+  flex-basis: 24px;
+}
+.flex-basis-25px {
+  flex-basis: 25px;
+}
+.flex-basis-26px {
+  flex-basis: 26px;
+}
+.flex-basis-27px {
+  flex-basis: 27px;
+}
+.flex-basis-28px {
+  flex-basis: 28px;
+}
+.flex-basis-29px {
+  flex-basis: 29px;
+}
+.flex-basis-30px {
+  flex-basis: 30px;
+}
+.flex-basis-31px {
+  flex-basis: 32px;
+}
+.flex-basis-33px {
+  flex-basis: 33px;
+}
+.flex-basis-34px {
+  flex-basis: 34px;
+}
+.flex-basis-35px {
+  flex-basis: 35px;
+}
+.flex-basis-36px {
+  flex-basis: 36px;
+}
+.flex-basis-37px {
+  flex-basis: 37px;
+}
+.flex-basis-38px {
+  flex-basis: 38px;
+}
+.flex-basis-39px {
+  flex-basis: 39px;
+}
+.flex-basis-40px {
+  flex-basis: 40px;
+}
+.flex-basis-41px {
+  flex-basis: 41px;
+}
+.flex-basis-42px {
+  flex-basis: 42px;
+}
+.flex-basis-43px {
+  flex-basis: 43px;
+}
+.flex-basis-44px {
+  flex-basis: 44px;
+}
+.flex-basis-45px {
+  flex-basis: 45px;
+}
+.flex-basis-46px {
+  flex-basis: 46px;
+}
+.flex-basis-47px {
+  flex-basis: 47px;
+}
+.flex-basis-48px {
+  flex-basis: 48px;
+}
+.flex-basis-49px {
+  flex-basis: 49px;
+}
+.flex-basis-50px {
+  flex-basis: 50px;
+}
+.flex-basis-51px {
+  flex-basis: 51px;
+}
+.flex-basis-52px {
+  flex-basis: 52px;
+}
+.flex-basis-53px {
+  flex-basis: 53px;
+}
+.flex-basis-54px {
+  flex-basis: 54px;
+}
+.flex-basis-55px {
+  flex-basis: 55px;
+}
+.flex-basis-56px {
+  flex-basis: 56px;
+}
+.flex-basis-57px {
+  flex-basis: 57px;
+}
+.flex-basis-58px {
+  flex-basis: 58px;
+}
+.flex-basis-59px {
+  flex-basis: 59px;
+}
+.flex-basis-60px {
+  flex-basis: 60px;
+}
+.flex-basis-61px {
+  flex-basis: 61px;
+}
+.flex-basis-62px {
+  flex-basis: 62px;
+}
+.flex-basis-63px {
+  flex-basis: 63px;
+}
+.flex-basis-64px {
+  flex-basis: 64px;
+}
+.flex-basis-65px {
+  flex-basis: 65px;
+}
+.flex-basis-66px {
+  flex-basis: 66px;
+}
+.flex-basis-67px {
+  flex-basis: 67px;
+}
+.flex-basis-68px {
+  flex-basis: 68px;
+}
+.flex-basis-69px {
+  flex-basis: 69px;
+}
+.flex-basis-70px {
+  flex-basis: 70px;
+}
+.flex-basis-71px {
+  flex-basis: 71px;
+}
+.flex-basis-72px {
+  flex-basis: 72px;
+}
+.flex-basis-73px {
+  flex-basis: 73px;
+}
+.flex-basis-74px {
+  flex-basis: 74px;
+}
+.flex-basis-75px {
+  flex-basis: 75px;
+}
+.flex-basis-76px {
+  flex-basis: 76px;
+}
+.flex-basis-77px {
+  flex-basis: 77px;
+}
+.flex-basis-78px {
+  flex-basis: 78px;
+}
+.flex-basis-79px {
+  flex-basis: 79px;
+}
+.flex-basis-80px {
+  flex-basis: 80px;
+}
+.flex-basis-81px {
+  flex-basis: 81px;
+}
+.flex-basis-82px {
+  flex-basis: 82px;
+}
+.flex-basis-83px {
+  flex-basis: 83px;
+}
+.flex-basis-84px {
+  flex-basis: 84px;
+}
+.flex-basis-85px {
+  flex-basis: 85px;
+}
+.flex-basis-86px {
+  flex-basis: 86px;
+}
+.flex-basis-87px {
+  flex-basis: 87px;
+}
+.flex-basis-88px {
+  flex-basis: 88px;
+}
+.flex-basis-89px {
+  flex-basis: 89px;
+}
+.flex-basis-90px {
+  flex-basis: 90px;
+}
+.flex-basis-90px {
+  flex-basis: 90px;
+}
+.flex-basis-91px {
+  flex-basis: 91px;
+}
+.flex-basis-92px {
+  flex-basis: 92px;
+}
+.flex-basis-93px {
+  flex-basis: 93px;
+}
+.flex-basis-94px {
+  flex-basis: 94px;
+}
+.flex-basis-95px {
+  flex-basis: 95px;
+}
+.flex-basis-96px {
+  flex-basis: 96px;
+}
+.flex-basis-97px {
+  flex-basis: 97px;
+}
+.flex-basis-98px {
+  flex-basis: 98px;
+}
+.flex-basis-99px {
+  flex-basis: 99px;
+}
+.flex-basis-100px {
+  flex-basis: 100px;
+}
+.flex-basis-105px {
+  flex-basis: 105px;
+}
+.flex-basis-110px {
+  flex-basis: 110px;
+}
+.flex-basis-115px {
+  flex-basis: 115px;
+}
+.flex-basis-120px {
+  flex-basis: 120px;
+}
+.flex-basis-125px {
+  flex-basis: 125px;
+}
+.flex-basis-130px {
+  flex-basis: 130px;
+}
+.flex-basis-135px {
+  flex-basis: 135px;
+}
+.flex-basis-140px {
+  flex-basis: 140px;
+}
+.flex-basis-145px {
+  flex-basis: 145px;
+}
+.flex-basis-150px {
+  flex-basis: 150px;
+}
+.flex-basis-160px {
+  flex-basis: 160px;
+}
+.flex-basis-170px {
+  flex-basis: 170px;
+}
+.flex-basis-180px {
+  flex-basis: 180px;
+}
+.flex-basis-190px {
+  flex-basis: 190px;
+}
+.flex-basis-200px {
+  flex-basis: 200px;
+}
+.flex-basis-210px {
+  flex-basis: 210px;
+}
+.flex-basis-220px {
+  flex-basis: 220px;
+}
+.flex-basis-230px {
+  flex-basis: 230px;
+}
+.flex-basis-240px {
+  flex-basis: 240px;
+}
+.flex-basis-250px {
+  flex-basis: 250px;
+}
+.flex-basis-260px {
+  flex-basis: 260px;
+}
+.flex-basis-270px {
+  flex-basis: 270px;
+}
+.flex-basis-280px {
+  flex-basis: 280px;
+}
+.flex-basis-290px {
+  flex-basis: 290px;
+}
+.flex-basis-300px {
+  flex-basis: 300px;
+}
+.flex-basis-310px {
+  flex-basis: 310px;
+}
+.flex-basis-320px {
+  flex-basis: 320px;
+}
+.flex-basis-330px {
+  flex-basis: 330px;
+}
+.flex-basis-340px {
+  flex-basis: 340px;
+}
+.flex-basis-350px {
+  flex-basis: 350px;
+}
+.flex-basis-360px {
+  flex-basis: 360px;
+}
+.flex-basis-370px {
+  flex-basis: 370px;
+}
+.flex-basis-380px {
+  flex-basis: 380px;
+}
+.flex-basis-390px {
+  flex-basis: 390px;
+}
+.flex-basis-400px {
+  flex-basis: 400px;
+}
+.flex-basis-410px {
+  flex-basis: 410px;
+}
+.flex-basis-420px {
+  flex-basis: 420px;
+}
+.flex-basis-430px {
+  flex-basis: 430px;
+}
+.flex-basis-440px {
+  flex-basis: 440px;
+}
+.flex-basis-450px {
+  flex-basis: 450px;
+}
+.flex-basis-450px {
+  flex-basis: 450px;
+}
+.flex-basis-460px {
+  flex-basis: 460px;
+}
+.flex-basis-470px {
+  flex-basis: 470px;
+}
+.flex-basis-480px {
+  flex-basis: 480px;
+}
+.flex-basis-490px {
+  flex-basis: 490px;
+}
+.flex-basis-500px {
+  flex-basis: 500px;
+}
+.flex-basis-510px {
+  flex-basis: 510px;
+}
+.flex-basis-520px {
+  flex-basis: 520px;
+}
+.flex-basis-530px {
+  flex-basis: 530px;
+}
+.flex-basis-540px {
+  flex-basis: 540px;
+}
+.flex-basis-550px {
+  flex-basis: 550px;
+}
+.flex-basis-560px {
+  flex-basis: 5560px;
+}
+.flex-basis-570px {
+  flex-basis: 570px;
+}
+.flex-basis-580px {
+  flex-basis: 580px;
+}
+.flex-basis-590px {
+  flex-basis: 590px;
+}
+.flex-basis-600px {
+  flex-basis: 600px;
+}
+.flex-basis-610px {
+  flex-basis: 610px;
+}
+.flex-basis-620px {
+  flex-basis: 620px;
+}
+.flex-basis-630px {
+  flex-basis: 630px;
+}
+.flex-basis-640px {
+  flex-basis: 640px;
+}
+.flex-basis-650px {
+  flex-basis: 650px;
+}
+.flex-basis-680px {
+  flex-basis: 680px;
+}
+.flex-basis-690px {
+  flex-basis: 690px;
+}
+.flex-basis-700px {
+  flex-basis: 700px;
+}
+.flex-basis-710px {
+  flex-basis: 710px;
+}
+.flex-basis-720px {
+  flex-basis: 720px;
+}
+.flex-basis-730px {
+  flex-basis: 730px;
+}
+.flex-basis-740px {
+  flex-basis: 740px;
+}
+.flex-basis-750px {
+  flex-basis: 700px;
+}
+.flex-basis-760px {
+  flex-basis: 760px;
+}
+.flex-basis-770px {
+  flex-basis: 770px;
+}
+.flex-basis-780px {
+  flex-basis: 780px;
+}
+.flex-basis-790px {
+  flex-basis: 790px;
+}
+.flex-basis-800px {
+  flex-basis: 800px;
+}
+.flex-basis-810px {
+  flex-basis: 810px;
+}
+.flex-basis-820px {
+  flex-basis: 820px;
+}
+.flex-basis-830px {
+  flex-basis: 830px;
+}
+.flex-basis-840px {
+  flex-basis: 840px;
+}
+.flex-basis-850px {
+  flex-basis: 850px;
+}
+.flex-basis-860px {
+  flex-basis: 860px;
+}
+.flex-basis-870px {
+  flex-basis: 870px;
+}
+.flex-basis-880px {
+  flex-basis: 880px;
+}
+.flex-basis-890px {
+  flex-basis: 890px;
+}
+.flex-basis-900px {
+  flex-basis: 900px;
+}
+.flex-basis-910px {
+  flex-basis: 910px;
+}
+.flex-basis-920px {
+  flex-basis: 920px;
+}
+.flex-basis-930px {
+  flex-basis: 930px;
+}
+.flex-basis-940px {
+  flex-basis: 940px;
+}
+.flex-basis-940px {
+  flex-basis: 940px;
+}
+.flex-basis-960px {
+  flex-basis: 960px;
+}
+.flex-basis-970px {
+  flex-basis: 970px;
+}
+.flex-basis-980px {
+  flex-basis: 980px;
+}
+.flex-basis-990px {
+  flex-basis: 990px;
+}
+.flex-basis-1000px {
+  flex-basis: 1000px;
+}
+.flex-basis-1010px {
+  flex-basis: 1010px;
+}
+.flex-basis-1020px {
+  flex-basis: 1020px;
+}
+.flex-basis-1030px {
+  flex-basis: 1030px;
+}
+.flex-basis-1040px {
+  flex-basis: 1040px;
+}
+.flex-basis-1050px {
+  flex-basis: 1050px;
+}
+.flex-basis-1060px {
+  flex-basis: 1060px;
+}
+.flex-basis-1070px {
+  flex-basis: 1070px;
+}
+.flex-basis-1080px {
+  flex-basis: 1080px;
+}
+.flex-basis-1090px {
+  flex-basis: 1090px;
+}
+.flex-basis-1200px {
+  flex-basis: 1200px;
+}
+.flex-basis-1210px {
+  flex-basis: 1210px;
+}
+.flex-basis-1220px {
+  flex-basis: 1220px;
+}
+.flex-basis-1230px {
+  flex-basis: 1230px;
+}
+.flex-basis-1240px {
+  flex-basis: 1240px;
+}
+.flex-basis-1250px {
+  flex-basis: 1250px;
+}
+.flex-basis-1260px {
+  flex-basis: 1260px;
+}
+.flex-basis-1270px {
+  flex-basis: 1270px;
+}
+.flex-basis-1280px {
+  flex-basis: 1280px;
+}
+.flex-basis-1290px {
+  flex-basis: 1290px;
+}
+.flex-basis-1300px {
+  flex-basis: 1300px;
+}
+.flex-basis-1310px {
+  flex-basis: 1310px;
+}
+.flex-basis-1320px {
+  flex-basis: 1320px;
+}
+.flex-basis-1330px {
+  flex-basis: 1330px;
+}
+.flex-basis-1340px {
+  flex-basis: 1340px;
+}
+.flex-basis-1350px {
+  flex-basis: 1350px;
+}
+.flex-basis-1360px {
+  flex-basis: 1360px;
+}
+.flex-basis-1370px {
+  flex-basis: 1370px;
+}
+.flex-basis-1380px {
+  flex-basis: 1380px;
+}
+.flex-basis-1390px {
+  flex-basis: 1390px;
+}
+.flex-basis-1400px {
+  flex-basis: 1400px;
 }
