--- a/index.css
+++ b/index.css
@@ -1,24 +1,20 @@
 .wrap-all-but-footer {
   height: calc(100vh - 70px);
 }
-
 /* MOBILE FIRST */
 /* AVVOLGITORE header e main */
 .wrap-header-and-main {
   width: calc(100vw - 40px);
 }
-
 /* MAIN */
 main .row img {
   max-width: 180px;
 }
-
 /* evitare che i layer delle immagini fuoriescano
 di qualche pixel dalle immagini stesse */
 main img {
   display: block;
 }
-
 main .titles-in-main {
   bottom: 97%;
   left: 0;
@@ -28,7 +24,6 @@ main .titles-in-main-row3 {
   bottom: 102%;
   left: 0;
 }
-
 main .layer {
   top: 0;
   left: 0;
@@ -39,7 +34,6 @@ main .layer {
 main .layer.circled {
   border-radius: 50%;
 }
-
 main .circle-of-play {
   left: 50%;
   top: 50%;
@@ -63,7 +57,6 @@ main .layer:hover .fa-play {
 main .layer:hover {
   background-color: rgba(0, 0, 0, 0.3);
 }
-
 /* ASIDE */
 /* far sparire la parte da 
 m in su su mobile */
@@ -85,6 +78,7 @@ aside #newPlaylistUl a,
   font-size: 0.8rem;
   padding-left: 13px;
   padding-bottom: 8px;
+  cursor: pointer;
 }
 aside #newPlaylistUl a:hover {
   color: #fff;
@@ -139,7 +133,6 @@ pallino che si crea in fondo */
     width: 100%;
   }
 }
-
 .pallino {
   left: 100%;
   top: 50%;
@@ -154,11 +147,9 @@ footer .wrap-play-btn:hover {
 footer .fa-play:hover {
   border: 0;
 }
-
 footer .progression-audio:hover .pallino.audio {
   opacity: 1;
 }
-
 /* **************** */
 /* MEDIA QUERIES */
 @media screen and (min-width: 601px) {
@@ -183,7 +174,6 @@ footer .progression-audio:hover .pallino.audio {
     display: flex;
     flex-direction: column;
   }
-
   .active.aside-icon-element {
     background-color: #a1ed2e;
   }
@@ -227,7 +217,6 @@ footer .progression-audio:hover .pallino.audio {
     width: 50%;
   }
 }
-
 @media screen and (min-width: 668px) {
   .player-btn-wrap {
     width: 50%;
@@ -239,7 +228,6 @@ footer .progression-audio:hover .pallino.audio {
     width: 25%;
   }
 }
-
 @media screen and (min-width: 1200px) {
   /* footer */
   .brano-e-like-wrap {
@@ -278,7 +266,6 @@ footer .progression-audio:hover .pallino.audio {
     bottom: 13%;
   }
 }
-
 @media screen and (max-height: 600px) {
   main ul.z-index-20 {
     display: none;
